# irrlicht

./: .gitignore  CMakeLists.txt
cmake/: FindDirectX.cmake
