cmake_minimum_required(VERSION 2.6)
PROJECT(irrlicht)

SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(CMAKE_CXX_FLAGS_DEBUG  "g")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")

IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)

IF(CMAKE_CXX_FLAGS_DEBUG)
   SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/debug)
ELSE(CMAKE_CXX_FLAGS_DEBUG)
   SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/release)
ENDIF(CMAKE_CXX_FLAGS_DEBUG)

INCLUDE_DIRECTORIES(
   ${PROJECT_SOURCE_DIR}/include
)

message ("Irrlicht src: " ${PROJECT_SOURCE_DIR} "/source/irrlicht")
FILE(GLOB SRCS "${PROJECT_SOURCE_DIR}/source/irrlicht/*.cpp")
message ("Irrlicht hdrs: " ${PROJECT_SOURCE_DIR} "/include")
FILE(GLOB HDRS "${PROJECT_SOURCE_DIR}/include/*.h")

add_library(irrlicht ${SRCS} ${HDRS})

set_target_properties(irrlicht PROPERTIES COMPILE_DEFINITIONS "_IRR_STATIC_LIB_;_CRT_SECURE_NO_WARNINGS")

if ( MSVC )
    set_target_properties(irrlicht PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../../libs)
    set_target_properties(irrlicht PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../../../libs)
    set_target_properties(irrlicht PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/../../../libs)
endif ( MSVC )